natsumi/modules/miniplayer.css
/* ... */
@keyframes miniplayer-appear-horizontal {
  from {
    translate: 10px 0;
    opacity: 0;
  }

  to {
    translate: 0 0;
    opacity: 1;
  }
}

@keyframes miniplayer-scroll {
  from {
    translate: 0;
  }

  to {
    translate: calc(var(--natsumi-animation-width) * -1);
  }
}

@keyframes miniplayer-scrubber-pulse {
  0% {
    background-color: var(--natsumi-pulse-initial-color);
  }

  50% {
    background-color: var(--natsumi-pulse-filled-color);
  }

  100% {
    background-color: var(--natsumi-pulse-initial-color);
  }
}

#vertical-tabs {
  flex-direction: column;
}

#natsumi-miniplayer-container {
  -moz-window-dragging: no-drag;
  flex-direction: row;

  &:not([hide-margin]) {
    margin: var(--tab-block-margin) var(--tab-inner-inline-margin) !important;
  }

  @media -moz-pref("sidebar.verticalTabs") {
    order: 1;
    flex-direction: column;
  }

  @media -moz-pref("natsumi.miniplayer.scroll-view") and -moz-pref("sidebar.verticalTabs") {
    display: inline-flex !important;
    overflow-x: scroll;
    flex-direction: row;
    scroll-snap-type: x mandatory;
    scrollbar-width: none;
    gap: 10px;
    padding: 4px !important;
    margin: calc(var(--tab-block-margin) - 4px) calc(var(--tab-inner-inline-margin) - 4px) !important;

    &:not([hide-margin]) {
      margin-top: calc(var(--tab-block-margin) + 1px) !important;
    }
  }

  @media not -moz-pref("natsumi.sidebar.disable-bottom-toolbar") {
    &:not([hide-margin]) {
      margin-bottom: var(--natsumi-browser-separation) !important;
    }
  }
}

@media not -moz-pref("natsumi.sidebar.disable-bottom-toolbar") {
  @media -moz-pref("natsumi.sidebar.autohide-bottom-toolbar") {
    body[natsumi-bottom-toolbar-empty] {
      #sidebar-container, #sidebar-main {
        #natsumi-miniplayer-container:not([hide-margin]) {
          margin-bottom: var(--natsumi-browser-separation) !important;
        }
      }
    }

    body:not([natsumi-bottom-toolbar-empty]) {
      #natsumi-miniplayer-container:not([hide-margin]) {
        margin-bottom: 0 !important;
      }
    }
  }

  @media not -moz-pref("natsumi.sidebar.autohide-bottom-toolbar") {
    #natsumi-miniplayer-container:not([hide-margin]) {
      margin-bottom: 0 !important;
    }
  }
}
/* ... */

